# AudioPlugin02

./: .gitignore  .gitmodules  CMakeLists.txt  FRONTEND_GUIDE.md  KarplusStrong.cpp  KarplusStrong.h  PLUGIN_ARCHITECTURE.md  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  everything.h  interface.html  noise.cpp  pulse.cpp  pulse.h  saw.cpp  script.js  styles.css
Resources/: index.html  script.js  style.css
Source/DSP/: AudioApp.h  Chorus.cpp  Chorus.h  CrossoverFilter.cpp  CrossoverFilter.h  DelayLine.h  DiffusionNetwork.cpp  DiffusionNetwork.h  DiffusionStage.h  DryWetMixer.h  EarlyReflections.cpp  EarlyReflections.h  FDNReverb.cpp  FDNReverb.h  FeedbackMatrix.h  Freeze.h  InputFilter.cpp  InputFilter.h  LFO.h  Predelay.cpp  Predelay.h  SmoothedValue.h  SpinModulator.cpp  SpinModulator.h  StereoWidener.h  allpass.cpp  allpass.hpp  comb.cpp  denormals.h  noise.cpp  noise.h  saw.h  shifter.cpp  tuning.h
Source/DSP/Decay/: FDNReverb.cpp
Source/DSP/DiffusionNetwork/: DiffusionNetwork.cpp  DiffusionStage.h
Source/DSP/EarlyReflections/: EarlyReflections.cpp
Source/Parameters/: ParameterIDs.h  ParameterLayout.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WebviewBridge.h
WebUI/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
WebUI/src/: App.svelte  app.css  app.ts  main.ts
WebUI/src/bridge/: bridge.ts  types.ts
WebUI/src/components/: FilterGraph.svelte  NeuButton.svelte  NeuDiffusionNetworkGraph.svelte  NeuKnob.svelte  NeuNumber.svelte  NeuSelector.svelte  audioPlayer.svelte  knob.html  knob.svelte  knobComponent.ts  waveSelector.svelte
WebUI/src/controls/: audioPlayer.ts  dropMenu.ts  knob.ts
WebUI/src/state/: store.ts
WebUI/src/types/: parameters.ts
docs/: ARCHITECTURE.md
